--- a/languages/cn.json
+++ b/languages/cn.json
@@ -1,136 +1,196 @@
 {
-    "enhancedcombathud.controls.toggle.title": "Toggle Argon Combat HUD",
-    "enhancedcombathud.controls.toggle.warning" : "Argon Combat HUD: No token selected. Please select a token to enable the HUD",
-
-    "enhancedcombathud.settings.color.label" : "Color",
-    "enhancedcombathud.settings.fore-color.text" : "Text Color",
-    "enhancedcombathud.settings.fore-color.hint" : "Text color",
-    "enhancedcombathud.settings.color.text" : "Main Color",
-    "enhancedcombathud.settings.color.hint" : "Color of the actions tab and other main features of the HUD",
-    "enhancedcombathud.settings.color-bonus-action.text" : "Bonus Action Color",
-    "enhancedcombathud.settings.color-bonus-action.hint" : "Color of the bonus action tab",
-    "enhancedcombathud.settings.color-free-action.text" : "Free Action Color",
-    "enhancedcombathud.settings.color-free-action.hint" : "Color of the free action tab",
-    "enhancedcombathud.settings.color-reaction.text" : "Reaction Color",
-    "enhancedcombathud.settings.color-reaction.hint" : "Color of the reaction tab",
-    "enhancedcombathud.settings.color-end-turn.text" : "End Turn Color",
-    "enhancedcombathud.settings.color-end-turn.hint" : "Color of the end turn tab",
-    "enhancedcombathud.settings.color-tooltip.text" : "Tooltip Color",
-    "enhancedcombathud.settings.color-tooltip.hint" : "Color of the tooltips and save/skills/tools popup",
-
-    "enhancedcombathud.settings.theme.name" : "Theme",
-    "enhancedcombathud.settings.theme.hint" : "Theme of the HUD",
-    "enhancedcombathud.settings.theme.custom" : "Custom",
-    "enhancedcombathud.settings.theme.helium" : "Helium",
-    "enhancedcombathud.settings.theme.neon" : "Neon",
-    "enhancedcombathud.settings.theme.argon" : "Argon",
-    "enhancedcombathud.settings.theme.krypton" : "Krypton",
-    "enhancedcombathud.settings.theme.xenon" : "Xenon",
-    "enhancedcombathud.settings.theme.radon" : "Radon",
-    "enhancedcombathud.settings.theme.oganesson" : "Oganesson",
-
-    "enhancedcombathud.settings.scale.name" : "缩放比例",
-    "enhancedcombathud.settings.scale.hint" : "（除了主题设置时实时应用，其他设置均需要重新打开HUD才成功应用）",
-    "enhancedcombathud.settings.noAutoscale.name" : "Don't Autoscale",
-    "enhancedcombathud.settings.noAutoscale.hint" : "Don't scale the HUD to fit the screen, use the flat value in the Scale setting instead",
-    "enhancedcombathud.settings.leftPos.name" : "位置（左）",
-    "enhancedcombathud.settings.leftPos.hint" : "左边距",
-    "enhancedcombathud.settings.botPos.name" : "位置（下）",
-    "enhancedcombathud.settings.botPos.hint" : "底边距",
-    "enhancedcombathud.settings.playerDetailsBottom.name" : "角色细节位于底部",
-    "enhancedcombathud.settings.playerDetailsBottom.hint" : "将角色的姓名及职业细节放置于立绘底部区域而不是上方",
-    "enhancedcombathud.settings.preparedSpells.name" : "仅显示准备的法术",
-    "enhancedcombathud.settings.preparedSpells.hint" : "施法时仅展示准备的法术",
-    "enhancedcombathud.settings.showTooltips.name" : "显示提示信息",
-    "enhancedcombathud.settings.showTooltips.hint" : "在选择时显示提示信息",
-    "enhancedcombathud.settings.showTooltipsSpecial.name" : "为其他标准动作显示提示信息",
-    "enhancedcombathud.settings.showTooltipsSpecial.hint" : "为一些特殊的标准动作如撤离，闪避等显示提示信息",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuAbilities.name": "属性显示提示信息",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuAbilities.hint": "为属性菜单里的属性显示提示信息",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuSkills.name" : "技能显示提示信息",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuSkills.hint" : "为属性菜单里的技能显示提示信息",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuTools.name": "工具显示提示信息",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuTools.hint": "为属性菜单里的工具显示提示信息",
-    "enhancedcombathud.settings.fadeOutInactive.name" : "淡化",
-    "enhancedcombathud.settings.fadeOutInactive.hint" : "没有鼠标放置在HUD区域后，淡化HUD",
-    "enhancedcombathud.settings.fadeoutDelay.name" : "淡化延迟",
-    "enhancedcombathud.settings.fadeoutDelay.hint" : "淡化HUD的延迟时间（秒）",
-    "enhancedcombathud.settings.fadeoutOpacity.name" : "淡化不透明度",
-    "enhancedcombathud.settings.fadeoutOpacity.hint" : "HUD淡化后的不透明度",
-    "enhancedcombathud.settings.hideMacroPlayers.name" : "隐藏宏栏目和玩家列表",
-    "enhancedcombathud.settings.hideMacroPlayers.hint" : "当HUD打开后，隐藏玩家列表和宏栏目",
-    "enhancedcombathud.settings.openCombatStart.name" : "战斗时打开",
-    "enhancedcombathud.settings.openCombatStart.hint" : "当战斗开始时（自动）打开HUD",
-    "enhancedcombathud.settings.tooltipScale.name" : "提示信息缩放",
-    "enhancedcombathud.settings.tooltipScale.hint" : "提示信息的缩放比例",
-    "enhancedcombathud.settings.switchEquip.name" : "自动装备",
-    "enhancedcombathud.settings.switchEquip.hint" : "当切换套装时，自动装备/卸下对应的武器/其他物品",
-    "enhancedcombathud.settings.showWeaponsItems.name" : "在使用物品处显示武器",
-    "enhancedcombathud.settings.showWeaponsItems.hint" : "在使用物品栏显示武器，当武器槽不够用时非常有用",
-    "enhancedcombathud.settings.noAA.name" : "不要应用Active Effects",
-    "enhancedcombathud.settings.noAA.hint" : "当执行其他标准动作时，不要应用Active Effects。（需要刷新）",
-
-    "enhancedcombathud.tooltip.target.name" : "目标",
-    "enhancedcombathud.tooltip.range.name" : "范围",
-    "enhancedcombathud.tooltip.properties.name" : "属性",
-
-    "enhancedcombathud.settings.thememenu.name": "自定义主题",
-    "enhancedcombathud.settings.thememenu.hint": "配置，选择及客制化主题",
-    "enhancedcombathud.settings.thememenu.label": "更改主题配置",
-
-
-    "enhancedcombathud.themeOptions.save": "保存更改",
-    "enhancedcombathud.themeOptions.export": "导出主题",
-    "enhancedcombathud.themeOptions.autoTextColorTitle" : "Autoset Text Colors Based off Background",
-    "enhancedcombathud.themeOptions.autoTextColorHint" : "This setting adjust the text color based on the background color to a color that should be legiable.",
-    "enhancedcombathud.themeOptions.exportThemeName": "导出主题名称:",
-    "enhancedcombathud.themeOptions.exportTheme.save": "保存",
-    "enhancedcombathud.themeOptions.exportTheme.cancel": "取消",
-
-    "enhancedcombathud.themeOptions.themeTitle": "选择主题",
-    "enhancedcombathud.themeOptions.themeHint": "Selecting a theme will apply a predefined color pallet to Argon.",
-    
-
-
-    "enhancedcombathud.themeOptions.mainAction" : "标准动作区域颜色",
-    "enhancedcombathud.themeOptions.bonusAction" : "附赠动作区域颜色",
-    "enhancedcombathud.themeOptions.freeAction" : "特殊动作区域颜色",
-    "enhancedcombathud.themeOptions.reaction" : "反应区域颜色",
-    "enhancedcombathud.themeOptions.endTurn" : "回合结束区域颜色",
-    "enhancedcombathud.themeOptions.tooltip" : "提示信息颜色",
-    "enhancedcombathud.themeOptions.abilityMenu" : "属性菜单颜色",
-    "enhancedcombathud.themeOptions.buttons" : "按钮颜色",
-    "enhancedcombathud.themeOptions.movement" : "移动力方块颜色",
-    
-    "enhancedcombathud.themeOptions.background" : "背景色",
-    "enhancedcombathud.themeOptions.color" : "字体颜色",
-    "enhancedcombathud.themeOptions.border" : "边框颜色",
-    "enhancedcombathud.themeOptions.boxShadow" : "方块阴影颜色",
-
-    "enhancedcombathud.themeOptions.mainActionBase" : "当鼠标不在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.mainActionHover" : "当鼠标在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.bonusActionBase" : "当鼠标不在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.bonusActionHover" : "当鼠标在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.freeActionBase" : "当鼠标不在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.freeActionHover" : "当鼠标在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.reactionBase" : "当鼠标不在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.reactionHover" : "当鼠标在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.endTurnBase" : "当鼠标不在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.endTurnHover" : "当鼠标在上方时，背景/前景/边框颜色",
-    
-    "enhancedcombathud.themeOptions.tooltipHeader" : "提示信息标题区域的背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.tooltipSubtitle" : "提示信息次要标题区域的背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.tooltipBody" : "提示信息主要内容的背景/前景/边框颜色",
-
-    "enhancedcombathud.themeOptions.abilityMenuBase" : "当鼠标不在上方时，前景/方块阴影颜色",
-    "enhancedcombathud.themeOptions.abilityMenuHover" : "当鼠标在上方时，前景/方块阴影颜色",
-
-    "enhancedcombathud.themeOptions.buttonsBase" : "当鼠标不在上方时，背景/前景/边框颜色",
-    "enhancedcombathud.themeOptions.buttonsHover" : "当鼠标在上方时，背景/前景/边框颜色",
-
-    "enhancedcombathud.themeOptions.movementUsed" : "已使用的移动力的背景/方块阴影颜色",
-    "enhancedcombathud.themeOptions.movementBaseMovement" : "可用移动力的背景/方块阴影颜色",
-    "enhancedcombathud.themeOptions.movementDashMovement" : "疾走移动力的背景/方块阴影颜色",
-    "enhancedcombathud.themeOptions.movementDangerMovement" : "超出的移动力的背景/方块阴影颜色"
-
+  "enhancedcombathud": {
+    "controls": {
+      "toggle": {
+        "title": "Toggle Argon Combat HUD",
+        "warning": "Argon Combat HUD: No token selected. Please select a token to enable the HUD"
+      }
+    },
+    "settings": {
+      "color": {
+        "label": "Color",
+        "text": "Main Color",
+        "hint": "Color of the actions tab and other main features of the HUD"
+      },
+      "fore-color": {
+        "text": "Text Color",
+        "hint": "Text color"
+      },
+      "color-bonus-action": {
+        "text": "Bonus Action Color",
+        "hint": "Color of the bonus action tab"
+      },
+      "color-free-action": {
+        "text": "Free Action Color",
+        "hint": "Color of the free action tab"
+      },
+      "color-reaction": {
+        "text": "Reaction Color",
+        "hint": "Color of the reaction tab"
+      },
+      "color-end-turn": {
+        "text": "End Turn Color",
+        "hint": "Color of the end turn tab"
+      },
+      "color-tooltip": {
+        "text": "Tooltip Color",
+        "hint": "Color of the tooltips and save/skills/tools popup"
+      },
+      "theme": {
+        "name": "Theme",
+        "hint": "Theme of the HUD",
+        "custom": "Custom",
+        "helium": "Helium",
+        "neon": "Neon",
+        "argon": "Argon",
+        "krypton": "Krypton",
+        "xenon": "Xenon",
+        "radon": "Radon",
+        "oganesson": "Oganesson"
+      },
+      "scale": {
+        "name": "缩放比例",
+        "hint": "（除了主题设置时实时应用，其他设置均需要重新打开HUD才成功应用）"
+      },
+      "noAutoscale": {
+        "name": "Don't Autoscale",
+        "hint": "Don't scale the HUD to fit the screen, use the flat value in the Scale setting instead"
+      },
+      "leftPos": {
+        "name": "位置（左）",
+        "hint": "左边距"
+      },
+      "botPos": {
+        "name": "位置（下）",
+        "hint": "底边距"
+      },
+      "playerDetailsBottom": {
+        "name": "角色细节位于底部",
+        "hint": "将角色的姓名及职业细节放置于立绘底部区域而不是上方"
+      },
+      "preparedSpells": {
+        "name": "仅显示准备的法术",
+        "hint": "施法时仅展示准备的法术"
+      },
+      "showTooltips": {
+        "name": "显示提示信息",
+        "hint": "在选择时显示提示信息"
+      },
+      "showTooltipsSpecial": {
+        "name": "为其他标准动作显示提示信息",
+        "hint": "为一些特殊的标准动作如撤离，闪避等显示提示信息"
+      },
+      "showTooltipsAbilityMenuAbilities": {
+        "name": "属性显示提示信息",
+        "hint": "为属性菜单里的属性显示提示信息"
+      },
+      "showTooltipsAbilityMenuSkills": {
+        "name": "技能显示提示信息",
+        "hint": "为属性菜单里的技能显示提示信息"
+      },
+      "showTooltipsAbilityMenuTools": {
+        "name": "工具显示提示信息",
+        "hint": "为属性菜单里的工具显示提示信息"
+      },
+      "fadeOutInactive": {
+        "name": "淡化",
+        "hint": "没有鼠标放置在HUD区域后，淡化HUD"
+      },
+      "fadeoutDelay": {
+        "name": "淡化延迟",
+        "hint": "淡化HUD的延迟时间（秒）"
+      },
+      "fadeoutOpacity": {
+        "name": "淡化不透明度",
+        "hint": "HUD淡化后的不透明度"
+      },
+      "hideMacroPlayers": {
+        "name": "隐藏宏栏目和玩家列表",
+        "hint": "当HUD打开后，隐藏玩家列表和宏栏目"
+      },
+      "openCombatStart": {
+        "name": "战斗时打开",
+        "hint": "当战斗开始时（自动）打开HUD"
+      },
+      "tooltipScale": {
+        "name": "提示信息缩放",
+        "hint": "提示信息的缩放比例"
+      },
+      "switchEquip": {
+        "name": "自动装备",
+        "hint": "当切换套装时，自动装备/卸下对应的武器/其他物品"
+      },
+      "showWeaponsItems": {
+        "name": "在使用物品处显示武器",
+        "hint": "在使用物品栏显示武器，当武器槽不够用时非常有用"
+      },
+      "noAA": {
+        "name": "不要应用Active Effects",
+        "hint": "当执行其他标准动作时，不要应用Active Effects。（需要刷新）"
+      },
+      "thememenu": {
+        "name": "自定义主题",
+        "hint": "配置，选择及客制化主题",
+        "label": "更改主题配置"
+      }
+    },
+    "tooltip": {
+      "target": {
+        "name": "目标"
+      },
+      "range": {
+        "name": "范围"
+      },
+      "properties": {
+        "name": "属性"
+      }
+    },
+    "themeOptions": {
+      "save": "保存更改",
+      "export": "导出主题",
+      "autoTextColorTitle": "Autoset Text Colors Based off Background",
+      "autoTextColorHint": "This setting adjust the text color based on the background color to a color that should be legiable.",
+      "exportThemeName": "导出主题名称:",
+      "exportTheme": {
+        "save": "保存",
+        "cancel": "取消"
+      },
+      "themeTitle": "选择主题",
+      "themeHint": "Selecting a theme will apply a predefined color pallet to Argon.",
+      "mainAction": "标准动作区域颜色",
+      "bonusAction": "附赠动作区域颜色",
+      "freeAction": "特殊动作区域颜色",
+      "reaction": "反应区域颜色",
+      "endTurn": "回合结束区域颜色",
+      "tooltip": "提示信息颜色",
+      "abilityMenu": "属性菜单颜色",
+      "buttons": "按钮颜色",
+      "movement": "移动力方块颜色",
+      "background": "背景色",
+      "color": "字体颜色",
+      "border": "边框颜色",
+      "boxShadow": "方块阴影颜色",
+      "mainActionBase": "当鼠标不在上方时，背景/前景/边框颜色",
+      "mainActionHover": "当鼠标在上方时，背景/前景/边框颜色",
+      "bonusActionBase": "当鼠标不在上方时，背景/前景/边框颜色",
+      "bonusActionHover": "当鼠标在上方时，背景/前景/边框颜色",
+      "freeActionBase": "当鼠标不在上方时，背景/前景/边框颜色",
+      "freeActionHover": "当鼠标在上方时，背景/前景/边框颜色",
+      "reactionBase": "当鼠标不在上方时，背景/前景/边框颜色",
+      "reactionHover": "当鼠标在上方时，背景/前景/边框颜色",
+      "endTurnBase": "当鼠标不在上方时，背景/前景/边框颜色",
+      "endTurnHover": "当鼠标在上方时，背景/前景/边框颜色",
+      "tooltipHeader": "提示信息标题区域的背景/前景/边框颜色",
+      "tooltipSubtitle": "提示信息次要标题区域的背景/前景/边框颜色",
+      "tooltipBody": "提示信息主要内容的背景/前景/边框颜色",
+      "abilityMenuBase": "当鼠标不在上方时，前景/方块阴影颜色",
+      "abilityMenuHover": "当鼠标在上方时，前景/方块阴影颜色",
+      "buttonsBase": "当鼠标不在上方时，背景/前景/边框颜色",
+      "buttonsHover": "当鼠标在上方时，背景/前景/边框颜色",
+      "movementUsed": "已使用的移动力的背景/方块阴影颜色",
+      "movementBaseMovement": "可用移动力的背景/方块阴影颜色",
+      "movementDashMovement": "疾走移动力的背景/方块阴影颜色",
+      "movementDangerMovement": "超出的移动力的背景/方块阴影颜色"
+    }
+  }
 }
