--- a/languages/pt-br.json
+++ b/languages/pt-br.json
@@ -1,130 +1,184 @@
 {
-    "enhancedcombathud.controls.toggle.title": "Alternar Argon Combat HUD",
-    "enhancedcombathud.controls.toggle.warning" : "Argon Combat HUD: Nenhum token selecionado. Por favor selecione um token para ativar o HUD",
-
-    "enhancedcombathud.settings.color.label" : "Cor",
-    "enhancedcombathud.settings.fore-color.text" : "Cor do Texto",
-    "enhancedcombathud.settings.fore-color.hint" : "Cor do texto",
-    "enhancedcombathud.settings.color.text" : "Cor principal",
-    "enhancedcombathud.settings.color.hint" : "Color of the actions tab and other main features of the HUD",
-    "enhancedcombathud.settings.color-bonus-action.text" : "Bonus Action Color",
-    "enhancedcombathud.settings.color-bonus-action.hint" : "Color of the bonus action tab",
-    "enhancedcombathud.settings.color-free-action.text" : "Free Action Color",
-    "enhancedcombathud.settings.color-free-action.hint" : "Color of the free action tab",
-    "enhancedcombathud.settings.color-reaction.text" : "Reaction Color",
-    "enhancedcombathud.settings.color-reaction.hint" : "Color of the reaction tab",
-    "enhancedcombathud.settings.color-end-turn.text" : "End Turn Color",
-    "enhancedcombathud.settings.color-end-turn.hint" : "Color of the end turn tab",
-    "enhancedcombathud.settings.color-tooltip.text" : "Tooltip Color",
-    "enhancedcombathud.settings.color-tooltip.hint" : "Color of the tooltips and save/skills/tools popup",
-
-    "enhancedcombathud.settings.theme.name" : "Tema",
-    "enhancedcombathud.settings.theme.hint" : "Tema do HUD",
-    "enhancedcombathud.settings.theme.custom" : "Customizado",
-    "enhancedcombathud.settings.theme.helium" : "Helium",
-    "enhancedcombathud.settings.theme.neon" : "Neon",
-    "enhancedcombathud.settings.theme.argon" : "Argon",
-    "enhancedcombathud.settings.theme.krypton" : "Krypton",
-    "enhancedcombathud.settings.theme.xenon" : "Xenon",
-    "enhancedcombathud.settings.theme.radon" : "Radon",
-    "enhancedcombathud.settings.theme.oganesson" : "Oganesson",
-
-    "enhancedcombathud.settings.scale.name" : "Escala",
-    "enhancedcombathud.settings.scale.hint" : "HUD Scale - if autoscale is enabled this setting will be used as a multiplier on top of the calculated scale",
-    "enhancedcombathud.settings.noAutoscale.name" : "Don't Autoscale",
-    "enhancedcombathud.settings.noAutoscale.hint" : "Don't scale the HUD to fit the screen, use the flat value in the Scale setting instead",
-    "enhancedcombathud.settings.leftPos.name" : "Left Position",
-    "enhancedcombathud.settings.leftPos.hint" : "Distance from the left border in pixels",
-    "enhancedcombathud.settings.botPos.name" : "Bottom Position",
-    "enhancedcombathud.settings.botPos.hint" : "Distance from the bottom border in pixels",
-    "enhancedcombathud.settings.playerDetailsBottom.name" : "Player Details on Bottom",
-    "enhancedcombathud.settings.playerDetailsBottom.hint" : "Positions players name and class information at bottom for portrait",
-    "enhancedcombathud.settings.preparedSpells.name" : "Prepared Spells Only",
-    "enhancedcombathud.settings.preparedSpells.hint" : "Show only prepared spells",
-    "enhancedcombathud.settings.showTooltips.name" : "Show Tooltips",
-    "enhancedcombathud.settings.showTooltips.hint" : "Show tooltips on hover",
-    "enhancedcombathud.settings.showTooltipsSpecial.name" : "Show Tooltips for Special Actions",
-    "enhancedcombathud.settings.showTooltipsSpecial.hint" : "Show tooltips on hover for special actions (dodge,disengage,shove...)",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuAbilities.name": "Show Tooltips for Abilities",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuAbilities.hint": "Show tooltips on hover for abilities in the ability menu",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuSkills.name" : "Show Tooltips for Skills",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuSkills.hint" : "Show tooltips on hover for skills in the ability menu",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuTools.name": "Show Tooltips for Tools",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuTools.hint": "Show tooltips on hover for tools in the ability menu",
-    "enhancedcombathud.settings.fadeOutInactive.name" : "Fade Out",
-    "enhancedcombathud.settings.fadeOutInactive.hint" : "Fade out the HUD after not mouse overing it for 5 seconds",
-    "enhancedcombathud.settings.fadeoutDelay.name" : "Fadeout Delay",
-    "enhancedcombathud.settings.fadeoutDelay.hint" : "Delay before fading out the HUD in seconds",
-    "enhancedcombathud.settings.fadeoutOpacity.name" : "Fadeout Opacity",
-    "enhancedcombathud.settings.fadeoutOpacity.hint" : "Opacity of the HUD when faded out",
-    "enhancedcombathud.settings.hideMacroPlayers.name" : "Hide Macro Bar and Player list",
-    "enhancedcombathud.settings.hideMacroPlayers.hint" : "Hide Macro Bar and Player list while the HUD is opened",
-    "enhancedcombathud.settings.openCombatStart.name" : "Open on Combat Start",
-    "enhancedcombathud.settings.openCombatStart.hint" : "Open the HUD when a combat is started",
-    "enhancedcombathud.settings.tooltipScale.name" : "Tooltip Scale",
-    "enhancedcombathud.settings.tooltipScale.hint" : "Scale of the tooltips",
-
-    "enhancedcombathud.tooltip.target.name" : "Alvo",
-    "enhancedcombathud.tooltip.range.name" : "Alcance",
-    "enhancedcombathud.tooltip.properties.name" : "Propriedades",
-
-    "enhancedcombathud.settings.thememenu.name": "Configuração do Tema",
-    "enhancedcombathud.settings.thememenu.hint": "Configure, choose and cusomize Argon themes",
-    "enhancedcombathud.settings.thememenu.label": "Configure Themes",
-
-
-    "enhancedcombathud.themeOptions.save": "Salvar Mudanças",
-    "enhancedcombathud.themeOptions.export": "Exportar Tema",
-    "enhancedcombathud.themeOptions.autoTextColorTitle" : "Autoset Text Colors Based off Background",
-    "enhancedcombathud.themeOptions.autoTextColorHint" : "This setting adjust the text color based on the background color to a color that should be legiable.",
-    "enhancedcombathud.themeOptions.exportThemeName": "Export Theme Name:",
-    "enhancedcombathud.themeOptions.exportTheme.save": "Salvar",
-    "enhancedcombathud.themeOptions.exportTheme.cancel": "Cancelar",
-
-    "enhancedcombathud.themeOptions.themeTitle": "Escolha um tema",
-    "enhancedcombathud.themeOptions.themeHint": "Selecting a theme will apply a predefined color pallet to Argon.",
-    
-
-
-    "enhancedcombathud.themeOptions.mainAction" : "Main Action Colors",
-    "enhancedcombathud.themeOptions.bonusAction" : "Bonus Action Colors",
-    "enhancedcombathud.themeOptions.freeAction" : "Free Action Colors",
-    "enhancedcombathud.themeOptions.reaction" : "Reaction Colors",
-    "enhancedcombathud.themeOptions.endTurn" : "End Turn Colors",
-    "enhancedcombathud.themeOptions.tooltip" : "Tooltip Colors",
-    "enhancedcombathud.themeOptions.abilityMenu" : "Ability Menu Colors",
-    "enhancedcombathud.themeOptions.buttons" : "Button Colors",
-    "enhancedcombathud.themeOptions.movement" : "Movement Box Colors",
-    
-    "enhancedcombathud.themeOptions.background" : "Background Color",
-    "enhancedcombathud.themeOptions.color" : "Text Color",
-    "enhancedcombathud.themeOptions.border" : "Border Color",
-    "enhancedcombathud.themeOptions.boxShadow" : "Box Shadow Color",
-
-    "enhancedcombathud.themeOptions.mainActionBase" : "Background/Foreground/Border Colors when Mouse isn't over Element",
-    "enhancedcombathud.themeOptions.mainActionHover" : "Background/Foreground/Border Colors when Mouse is over Element",
-    "enhancedcombathud.themeOptions.bonusActionBase" : "Background/Foreground/Border Colors when Mouse isn't over Element",
-    "enhancedcombathud.themeOptions.bonusActionHover" : "Background/Foreground/Border Colors when Mouse is over Element",
-    "enhancedcombathud.themeOptions.freeActionBase" : "Background/Foreground/Border Colors when Mouse isn't over Element",
-    "enhancedcombathud.themeOptions.freeActionHover" : "Background/Foreground/Border Colors when Mouse is over Element",
-    "enhancedcombathud.themeOptions.reactionBase" : "Background/Foreground/Border Colors when Mouse isn't over Element",
-    "enhancedcombathud.themeOptions.reactionHover" : "Background/Foreground/Border Colors when Mouse is over Element",
-    "enhancedcombathud.themeOptions.endTurnBase" : "Background/Foreground/Border Colors when Mouse isn't over Element",
-    "enhancedcombathud.themeOptions.endTurnHover" : "Background/Foreground/Border Colors when Mouse is over Element",
-    
-    "enhancedcombathud.themeOptions.tooltipHeader" : "Background/Foreground/Border Colors of the Header of Tooltips/Windows",
-    "enhancedcombathud.themeOptions.tooltipSubtitle" : "Background/Foreground/Border Colors of the Subtitle in Tooltips",
-    "enhancedcombathud.themeOptions.tooltipBody" : "Background/Foreground/Border Colors of the Body of Tooltips/Windows",
-
-    "enhancedcombathud.themeOptions.abilityMenuBase" : "Foreground/Box Shadow Colors when Mouse isn't over Element",
-    "enhancedcombathud.themeOptions.abilityMenuHover" : "Foreground/Box Shadow Colors when Mouse is over Element",
-
-    "enhancedcombathud.themeOptions.buttonsBase" : "Background/Foreground/Border Colors when Mouse isn't over Element",
-    "enhancedcombathud.themeOptions.buttonsHover" : "Background/Foreground/Border Colors when Mouse is over Element",
-
-    "enhancedcombathud.themeOptions.movementUsed" : "Background/Box Shadow of box indicating used movement spaces",
-    "enhancedcombathud.themeOptions.movementBaseMovement" : "Background/Box Shadow of box indicating available movement spaces",
-    "enhancedcombathud.themeOptions.movementDashMovement" : "Background/Box Shadow of box indicating dash movement spaces",
-    "enhancedcombathud.themeOptions.movementDangerMovement" : "Background/Box Shadow of box indicating exceeded movement spaces"
-
+  "enhancedcombathud": {
+    "controls": {
+      "toggle": {
+        "title": "Alternar Argon Combat HUD",
+        "warning": "Argon Combat HUD: Nenhum token selecionado. Por favor selecione um token para ativar o HUD"
+      }
+    },
+    "settings": {
+      "color": {
+        "label": "Cor",
+        "text": "Cor principal",
+        "hint": "Color of the actions tab and other main features of the HUD"
+      },
+      "fore-color": {
+        "text": "Cor do Texto",
+        "hint": "Cor do texto"
+      },
+      "color-bonus-action": {
+        "text": "Bonus Action Color",
+        "hint": "Color of the bonus action tab"
+      },
+      "color-free-action": {
+        "text": "Free Action Color",
+        "hint": "Color of the free action tab"
+      },
+      "color-reaction": {
+        "text": "Reaction Color",
+        "hint": "Color of the reaction tab"
+      },
+      "color-end-turn": {
+        "text": "End Turn Color",
+        "hint": "Color of the end turn tab"
+      },
+      "color-tooltip": {
+        "text": "Tooltip Color",
+        "hint": "Color of the tooltips and save/skills/tools popup"
+      },
+      "theme": {
+        "name": "Tema",
+        "hint": "Tema do HUD",
+        "custom": "Customizado",
+        "helium": "Helium",
+        "neon": "Neon",
+        "argon": "Argon",
+        "krypton": "Krypton",
+        "xenon": "Xenon",
+        "radon": "Radon",
+        "oganesson": "Oganesson"
+      },
+      "scale": {
+        "name": "Escala",
+        "hint": "HUD Scale - if autoscale is enabled this setting will be used as a multiplier on top of the calculated scale"
+      },
+      "noAutoscale": {
+        "name": "Don't Autoscale",
+        "hint": "Don't scale the HUD to fit the screen, use the flat value in the Scale setting instead"
+      },
+      "leftPos": {
+        "name": "Left Position",
+        "hint": "Distance from the left border in pixels"
+      },
+      "botPos": {
+        "name": "Bottom Position",
+        "hint": "Distance from the bottom border in pixels"
+      },
+      "playerDetailsBottom": {
+        "name": "Player Details on Bottom",
+        "hint": "Positions players name and class information at bottom for portrait"
+      },
+      "preparedSpells": {
+        "name": "Prepared Spells Only",
+        "hint": "Show only prepared spells"
+      },
+      "showTooltips": {
+        "name": "Show Tooltips",
+        "hint": "Show tooltips on hover"
+      },
+      "showTooltipsSpecial": {
+        "name": "Show Tooltips for Special Actions",
+        "hint": "Show tooltips on hover for special actions (dodge,disengage,shove...)"
+      },
+      "showTooltipsAbilityMenuAbilities": {
+        "name": "Show Tooltips for Abilities",
+        "hint": "Show tooltips on hover for abilities in the ability menu"
+      },
+      "showTooltipsAbilityMenuSkills": {
+        "name": "Show Tooltips for Skills",
+        "hint": "Show tooltips on hover for skills in the ability menu"
+      },
+      "showTooltipsAbilityMenuTools": {
+        "name": "Show Tooltips for Tools",
+        "hint": "Show tooltips on hover for tools in the ability menu"
+      },
+      "fadeOutInactive": {
+        "name": "Fade Out",
+        "hint": "Fade out the HUD after not mouse overing it for 5 seconds"
+      },
+      "fadeoutDelay": {
+        "name": "Fadeout Delay",
+        "hint": "Delay before fading out the HUD in seconds"
+      },
+      "fadeoutOpacity": {
+        "name": "Fadeout Opacity",
+        "hint": "Opacity of the HUD when faded out"
+      },
+      "hideMacroPlayers": {
+        "name": "Hide Macro Bar and Player list",
+        "hint": "Hide Macro Bar and Player list while the HUD is opened"
+      },
+      "openCombatStart": {
+        "name": "Open on Combat Start",
+        "hint": "Open the HUD when a combat is started"
+      },
+      "tooltipScale": {
+        "name": "Tooltip Scale",
+        "hint": "Scale of the tooltips"
+      },
+      "thememenu": {
+        "name": "Configuração do Tema",
+        "hint": "Configure, choose and cusomize Argon themes",
+        "label": "Configure Themes"
+      }
+    },
+    "tooltip": {
+      "target": {
+        "name": "Alvo"
+      },
+      "range": {
+        "name": "Alcance"
+      },
+      "properties": {
+        "name": "Propriedades"
+      }
+    },
+    "themeOptions": {
+      "save": "Salvar Mudanças",
+      "export": "Exportar Tema",
+      "autoTextColorTitle": "Autoset Text Colors Based off Background",
+      "autoTextColorHint": "This setting adjust the text color based on the background color to a color that should be legiable.",
+      "exportThemeName": "Export Theme Name:",
+      "exportTheme": {
+        "save": "Salvar",
+        "cancel": "Cancelar"
+      },
+      "themeTitle": "Escolha um tema",
+      "themeHint": "Selecting a theme will apply a predefined color pallet to Argon.",
+      "mainAction": "Main Action Colors",
+      "bonusAction": "Bonus Action Colors",
+      "freeAction": "Free Action Colors",
+      "reaction": "Reaction Colors",
+      "endTurn": "End Turn Colors",
+      "tooltip": "Tooltip Colors",
+      "abilityMenu": "Ability Menu Colors",
+      "buttons": "Button Colors",
+      "movement": "Movement Box Colors",
+      "background": "Background Color",
+      "color": "Text Color",
+      "border": "Border Color",
+      "boxShadow": "Box Shadow Color",
+      "mainActionBase": "Background/Foreground/Border Colors when Mouse isn't over Element",
+      "mainActionHover": "Background/Foreground/Border Colors when Mouse is over Element",
+      "bonusActionBase": "Background/Foreground/Border Colors when Mouse isn't over Element",
+      "bonusActionHover": "Background/Foreground/Border Colors when Mouse is over Element",
+      "freeActionBase": "Background/Foreground/Border Colors when Mouse isn't over Element",
+      "freeActionHover": "Background/Foreground/Border Colors when Mouse is over Element",
+      "reactionBase": "Background/Foreground/Border Colors when Mouse isn't over Element",
+      "reactionHover": "Background/Foreground/Border Colors when Mouse is over Element",
+      "endTurnBase": "Background/Foreground/Border Colors when Mouse isn't over Element",
+      "endTurnHover": "Background/Foreground/Border Colors when Mouse is over Element",
+      "tooltipHeader": "Background/Foreground/Border Colors of the Header of Tooltips/Windows",
+      "tooltipSubtitle": "Background/Foreground/Border Colors of the Subtitle in Tooltips",
+      "tooltipBody": "Background/Foreground/Border Colors of the Body of Tooltips/Windows",
+      "abilityMenuBase": "Foreground/Box Shadow Colors when Mouse isn't over Element",
+      "abilityMenuHover": "Foreground/Box Shadow Colors when Mouse is over Element",
+      "buttonsBase": "Background/Foreground/Border Colors when Mouse isn't over Element",
+      "buttonsHover": "Background/Foreground/Border Colors when Mouse is over Element",
+      "movementUsed": "Background/Box Shadow of box indicating used movement spaces",
+      "movementBaseMovement": "Background/Box Shadow of box indicating available movement spaces",
+      "movementDashMovement": "Background/Box Shadow of box indicating dash movement spaces",
+      "movementDangerMovement": "Background/Box Shadow of box indicating exceeded movement spaces"
+    }
+  }
 }
