--- a/languages/ru.json
+++ b/languages/ru.json
@@ -1,142 +1,205 @@
 {
-    "enhancedcombathud.controls.toggle.title": "Переключение Argon HUD",
-    "enhancedcombathud.controls.toggle.warning" : "Argon HUD: Не выбран токен. Выберите токен для отображения интерфейса.",
-
-    "enhancedcombathud.settings.color.label" : "Цвет",
-    "enhancedcombathud.settings.fore-color.text" : "Цвет текста",
-    "enhancedcombathud.settings.fore-color.hint" : "Цвет текста",
-    "enhancedcombathud.settings.color.text" : "Основной цвет",
-    "enhancedcombathud.settings.color.hint" : "Цвет вкладки действий и основных элементов интерфейса",
-    "enhancedcombathud.settings.color-bonus-action.text" : "Цвет бонусных действий",
-    "enhancedcombathud.settings.color-bonus-action.hint" : "Цвет вкладки бонусных действий",
-    "enhancedcombathud.settings.color-free-action.text" : "Цвет свободных действий",
-    "enhancedcombathud.settings.color-free-action.hint" : "Цвет вкладки свободных действий",
-    "enhancedcombathud.settings.color-reaction.text" : "Цвет ответных действий",
-    "enhancedcombathud.settings.color-reaction.hint" : "Цвет вкладки ответных действий",
-    "enhancedcombathud.settings.color-end-turn.text" : "Цвет конца хода",
-    "enhancedcombathud.settings.color-end-turn.hint" : "Цвет вкладки конца хода",
-    "enhancedcombathud.settings.color-tooltip.text" : "Цвет подсказок",
-    "enhancedcombathud.settings.color-tooltip.hint" : "Цвет подсказок для испытаний/навыков/инструментов",
-
-    "enhancedcombathud.settings.theme.name" : "Тема",
-    "enhancedcombathud.settings.theme.hint" : "Тема оформления интерфейса",
-    "enhancedcombathud.settings.theme.custom" : "Особая",
-    "enhancedcombathud.settings.theme.helium" : "Гелий",
-    "enhancedcombathud.settings.theme.neon" : "Неон",
-    "enhancedcombathud.settings.theme.argon" : "Аргон",
-    "enhancedcombathud.settings.theme.krypton" : "Криптон",
-    "enhancedcombathud.settings.theme.xenon" : "Ксенон",
-    "enhancedcombathud.settings.theme.radon" : "Радон",
-    "enhancedcombathud.settings.theme.oganesson" : "Оганессон",
-
-    "enhancedcombathud.settings.scale.name" : "Масштаб",
-    "enhancedcombathud.settings.scale.hint" : "Масштаб интерфейса - если включён автоматическое масштабирование, то эта настройка будет работать как дополнительный множитель масштаба.",
-    "enhancedcombathud.settings.noAutoscale.name" : "Не масштабировать автоматически",
-    "enhancedcombathud.settings.noAutoscale.hint" : "Интерфейс не будет подогнан под размер экрана, а вместо этого будет использовано значение настройки Масштаб",
-    "enhancedcombathud.settings.leftPos.name" : "Отступ слева",
-    "enhancedcombathud.settings.leftPos.hint" : "Расстояние от левой границы в пикселях",
-    "enhancedcombathud.settings.botPos.name" : "Отступ снизу",
-    "enhancedcombathud.settings.botPos.hint" : "Расстояние от нижней границы в пикселях",
-    "enhancedcombathud.settings.playerDetailsBottom.name" : "Подробности игрока снизу",
-    "enhancedcombathud.settings.playerDetailsBottom.hint" : "Расположить имя игрока и информацию о классе под портретом",
-    "enhancedcombathud.settings.preparedSpells.name" : "Только подготовленные заклинания",
-    "enhancedcombathud.settings.preparedSpells.hint" : "Отображать только подготовленные заклинания",
-    "enhancedcombathud.settings.showTooltips.name" : "Отображение подсказок",
-    "enhancedcombathud.settings.showTooltips.hint" : "Показывать подсказки при наведении",
-    "enhancedcombathud.settings.showTooltipsSpecial.name" : "Отображение подсказок особых действий",
-    "enhancedcombathud.settings.showTooltipsSpecial.hint" : "Показывать подсказки при наведении на особые действия (уклонение, отступление и т.д.)",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuAbilities.name": "Отображение подсказок характеристик",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuAbilities.hint": "Показывать подсказки при наведении на характеристики",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuSkills.name" : "Отображение подсказок навыков",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuSkills.hint" : "Показывать подсказки при наведении на навыки",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuTools.name": "Отображение подсказок инструментов",
-    "enhancedcombathud.settings.showTooltipsAbilityMenuTools.hint": "Показывать подсказки при наведении на инструменты",
-    "enhancedcombathud.settings.fadeOutInactive.name" : "Приглушение интерфейса",
-    "enhancedcombathud.settings.fadeOutInactive.hint" : "Эффект приглушения HUD, когда курсор мыши не на нём",
-    "enhancedcombathud.settings.fadeoutDelay.name" : "Задержка приглушения",
-    "enhancedcombathud.settings.fadeoutDelay.hint" : "Задержка в секундах перед тем, как эффект приглушения будет активирован",
-    "enhancedcombathud.settings.fadeoutOpacity.name" : "Непрозрачность приглушения",
-    "enhancedcombathud.settings.fadeoutOpacity.hint" : "Непрозрачность HUD с эффектом приглушения",
-    "enhancedcombathud.settings.hideMacroPlayers.name" : "Скрытие панели макросов и списка игроков",
-    "enhancedcombathud.settings.hideMacroPlayers.hint" : "Когда HUD открыт, панель макросов и список игроков будут скрыты",
-    "enhancedcombathud.settings.openCombatStart.name" : "Открытие при начале боя",
-    "enhancedcombathud.settings.openCombatStart.hint" : "HUD будет открываться в начале боя.",
-    "enhancedcombathud.settings.tooltipScale.name" : "Масштаб подсказок",
-    "enhancedcombathud.settings.tooltipScale.hint" : "Множитель размера для подсказок",
-    "enhancedcombathud.settings.switchEquip.name" : "Автоматическое снаряжение",
-    "enhancedcombathud.settings.switchEquip.hint" : "Автоматически надевать и снимать снаряжение при смене наборов",
-    "enhancedcombathud.settings.showWeaponsItems.name" : "Отображение оружия в разделе 'Использование предмета'",
-    "enhancedcombathud.settings.showWeaponsItems.hint" : "Оружие будет отображаться в разделе 'Использование предмета'. Полезно, если вам не хватает ячеек под наборы оружия.",
-    "enhancedcombathud.settings.noAA.name" : "Не применять активные эффекты",
-    "enhancedcombathud.settings.noAA.hint" : "Активные эффекты не будут применяться при использовании особых действий (требуется перезагрузка)",
-
-    "enhancedcombathud.settings.rangefinder.name": "3D Canvas - Поисковик дистанции",
-    "enhancedcombathud.settings.rangefinder.hint": "Включает Поисковик дистанции для 3D Canvas при на ведении на предметы в HUD. 'Только дистанция' будет отображать дистанцию до цели. Дистанция будет красной, если цель вне досягаемости. 'Игровой режим' будет отображать шанс попадания по цели (для атак и испытаний).",
-    "enhancedcombathud.settings.rangefinder.choices.none": "Отключено",
-    "enhancedcombathud.settings.rangefinder.choices.rangeOnly": "Только дистанция",
-    "enhancedcombathud.settings.rangefinder.choices.full": "Режим игры",
-
-    "enhancedcombathud.tooltip.target.name" : "Цель",
-    "enhancedcombathud.tooltip.range.name" : "Дистанция",
-    "enhancedcombathud.tooltip.properties.name" : "Свойства",
-
-    "enhancedcombathud.settings.thememenu.name": "Настройка темы",
-    "enhancedcombathud.settings.thememenu.hint": "Настройка и выбор оформления Argon",
-    "enhancedcombathud.settings.thememenu.label": "Настройка тем",
-
-
-    "enhancedcombathud.themeOptions.save": "Сохранение изменений",
-    "enhancedcombathud.themeOptions.export": "Экспорт темы",
-    "enhancedcombathud.themeOptions.autoTextColorTitle" : "Автоматически выставлять цвет текста на основе фона",
-    "enhancedcombathud.themeOptions.autoTextColorHint" : "Цвет текста будет автоматически подобран, чтобы быть читаемым на выбранном фоне.",
-    "enhancedcombathud.themeOptions.exportThemeName": "Название темы:",
-    "enhancedcombathud.themeOptions.exportTheme.save": "Сохранение",
-    "enhancedcombathud.themeOptions.exportTheme.cancel": "Отмена",
-
-    "enhancedcombathud.themeOptions.themeTitle": "Выбор темы",
-    "enhancedcombathud.themeOptions.themeHint": "Выбор темы также изменит настройки палитры.",
-    
-
-
-    "enhancedcombathud.themeOptions.mainAction" : "Цвет основных действий",
-    "enhancedcombathud.themeOptions.bonusAction" : "Цвет бонусных действий",
-    "enhancedcombathud.themeOptions.freeAction" : "Цвет свободных действий",
-    "enhancedcombathud.themeOptions.reaction" : "Цвет ответных действий",
-    "enhancedcombathud.themeOptions.endTurn" : "Цвет конца хода",
-    "enhancedcombathud.themeOptions.tooltip" : "Цвет подсказок",
-    "enhancedcombathud.themeOptions.abilityMenu" : "Цвет меню характеристик",
-    "enhancedcombathud.themeOptions.buttons" : "Цвет кнопок",
-    "enhancedcombathud.themeOptions.movement" : "Цвет блока перемещения",
-    
-    "enhancedcombathud.themeOptions.background" : "Цвет фона",
-    "enhancedcombathud.themeOptions.color" : "Цвет текста",
-    "enhancedcombathud.themeOptions.border" : "Цвет рамки",
-    "enhancedcombathud.themeOptions.boxShadow" : "Цвет теней",
-
-    "enhancedcombathud.themeOptions.mainActionBase" : "Цвета фона/текста/рамки, когда курсор не над элементом",
-    "enhancedcombathud.themeOptions.mainActionHover" : "Цвета фона/текста/рамки, когда курсор над элементом",
-    "enhancedcombathud.themeOptions.bonusActionBase" : "Цвета фона/текста/рамки, когда курсор не над элементом",
-    "enhancedcombathud.themeOptions.bonusActionHover" : "Цвета фона/текста/рамки, когда курсор над элементом",
-    "enhancedcombathud.themeOptions.freeActionBase" : "Цвета фона/текста/рамки, когда курсор не над элементом",
-    "enhancedcombathud.themeOptions.freeActionHover" : "Цвета фона/текста/рамки, когда курсор над элементом",
-    "enhancedcombathud.themeOptions.reactionBase" : "Цвета фона/текста/рамки, когда курсор не над элементом",
-    "enhancedcombathud.themeOptions.reactionHover" : "Цвета фона/текста/рамки, когда курсор над элементом",
-    "enhancedcombathud.themeOptions.endTurnBase" : "Цвета фона/текста/рамки, когда курсор не над элементом",
-    "enhancedcombathud.themeOptions.endTurnHover" : "Цвета фона/текста/рамки, когда курсор над элементом",
-    
-    "enhancedcombathud.themeOptions.tooltipHeader" : "Цвета фона/текста/рамки заголовка подсказок и окон",
-    "enhancedcombathud.themeOptions.tooltipSubtitle" : "Цвета фона/текста/рамки подзаголовка в подсказках",
-    "enhancedcombathud.themeOptions.tooltipBody" : "Цвета фона/текста/рамки основного текста в подсказках и окнах",
-
-    "enhancedcombathud.themeOptions.abilityMenuBase" : "Цвета переднего фона/теней, когда курсор не над элементом",
-    "enhancedcombathud.themeOptions.abilityMenuHover" : "Цвета переднего фона/теней, когда курсор над элементом",
-
-    "enhancedcombathud.themeOptions.buttonsBase" : "Цвета фона/переднего фона/рамки, когда курсор не над элементом",
-    "enhancedcombathud.themeOptions.buttonsHover" : "Цвета фона/переднего фона/рамки, когда курсор над элементом",
-
-    "enhancedcombathud.themeOptions.movementUsed" : "Фон/тень ячеек, отражающих использованные клетки перемещения",
-    "enhancedcombathud.themeOptions.movementBaseMovement" : "Фон/тень ячеек, отражающих доступные клетки перемещения",
-    "enhancedcombathud.themeOptions.movementDashMovement" : "Фон/тень ячеек, отражающих клетки перемещения рывком",
-    "enhancedcombathud.themeOptions.movementDangerMovement" : "Фон/тень ячеек, отражающих превышающие доступные клетки перемещения"
-
+  "enhancedcombathud": {
+    "controls": {
+      "toggle": {
+        "title": "Переключение Argon HUD",
+        "warning": "Argon HUD: Не выбран токен. Выберите токен для отображения интерфейса."
+      }
+    },
+    "settings": {
+      "color": {
+        "label": "Цвет",
+        "text": "Основной цвет",
+        "hint": "Цвет вкладки действий и основных элементов интерфейса"
+      },
+      "fore-color": {
+        "text": "Цвет текста",
+        "hint": "Цвет текста"
+      },
+      "color-bonus-action": {
+        "text": "Цвет бонусных действий",
+        "hint": "Цвет вкладки бонусных действий"
+      },
+      "color-free-action": {
+        "text": "Цвет свободных действий",
+        "hint": "Цвет вкладки свободных действий"
+      },
+      "color-reaction": {
+        "text": "Цвет ответных действий",
+        "hint": "Цвет вкладки ответных действий"
+      },
+      "color-end-turn": {
+        "text": "Цвет конца хода",
+        "hint": "Цвет вкладки конца хода"
+      },
+      "color-tooltip": {
+        "text": "Цвет подсказок",
+        "hint": "Цвет подсказок для испытаний/навыков/инструментов"
+      },
+      "theme": {
+        "name": "Тема",
+        "hint": "Тема оформления интерфейса",
+        "custom": "Особая",
+        "helium": "Гелий",
+        "neon": "Неон",
+        "argon": "Аргон",
+        "krypton": "Криптон",
+        "xenon": "Ксенон",
+        "radon": "Радон",
+        "oganesson": "Оганессон"
+      },
+      "scale": {
+        "name": "Масштаб",
+        "hint": "Масштаб интерфейса - если включён автоматическое масштабирование, то эта настройка будет работать как дополнительный множитель масштаба."
+      },
+      "noAutoscale": {
+        "name": "Не масштабировать автоматически",
+        "hint": "Интерфейс не будет подогнан под размер экрана, а вместо этого будет использовано значение настройки Масштаб"
+      },
+      "leftPos": {
+        "name": "Отступ слева",
+        "hint": "Расстояние от левой границы в пикселях"
+      },
+      "botPos": {
+        "name": "Отступ снизу",
+        "hint": "Расстояние от нижней границы в пикселях"
+      },
+      "playerDetailsBottom": {
+        "name": "Подробности игрока снизу",
+        "hint": "Расположить имя игрока и информацию о классе под портретом"
+      },
+      "preparedSpells": {
+        "name": "Только подготовленные заклинания",
+        "hint": "Отображать только подготовленные заклинания"
+      },
+      "showTooltips": {
+        "name": "Отображение подсказок",
+        "hint": "Показывать подсказки при наведении"
+      },
+      "showTooltipsSpecial": {
+        "name": "Отображение подсказок особых действий",
+        "hint": "Показывать подсказки при наведении на особые действия (уклонение, отступление и т.д.)"
+      },
+      "showTooltipsAbilityMenuAbilities": {
+        "name": "Отображение подсказок характеристик",
+        "hint": "Показывать подсказки при наведении на характеристики"
+      },
+      "showTooltipsAbilityMenuSkills": {
+        "name": "Отображение подсказок навыков",
+        "hint": "Показывать подсказки при наведении на навыки"
+      },
+      "showTooltipsAbilityMenuTools": {
+        "name": "Отображение подсказок инструментов",
+        "hint": "Показывать подсказки при наведении на инструменты"
+      },
+      "fadeOutInactive": {
+        "name": "Приглушение интерфейса",
+        "hint": "Эффект приглушения HUD, когда курсор мыши не на нём"
+      },
+      "fadeoutDelay": {
+        "name": "Задержка приглушения",
+        "hint": "Задержка в секундах перед тем, как эффект приглушения будет активирован"
+      },
+      "fadeoutOpacity": {
+        "name": "Непрозрачность приглушения",
+        "hint": "Непрозрачность HUD с эффектом приглушения"
+      },
+      "hideMacroPlayers": {
+        "name": "Скрытие панели макросов и списка игроков",
+        "hint": "Когда HUD открыт, панель макросов и список игроков будут скрыты"
+      },
+      "openCombatStart": {
+        "name": "Открытие при начале боя",
+        "hint": "HUD будет открываться в начале боя."
+      },
+      "tooltipScale": {
+        "name": "Масштаб подсказок",
+        "hint": "Множитель размера для подсказок"
+      },
+      "switchEquip": {
+        "name": "Автоматическое снаряжение",
+        "hint": "Автоматически надевать и снимать снаряжение при смене наборов"
+      },
+      "showWeaponsItems": {
+        "name": "Отображение оружия в разделе 'Использование предмета'",
+        "hint": "Оружие будет отображаться в разделе 'Использование предмета'. Полезно, если вам не хватает ячеек под наборы оружия."
+      },
+      "noAA": {
+        "name": "Не применять активные эффекты",
+        "hint": "Активные эффекты не будут применяться при использовании особых действий (требуется перезагрузка)"
+      },
+      "rangefinder": {
+        "name": "3D Canvas - Поисковик дистанции",
+        "hint": "Включает Поисковик дистанции для 3D Canvas при на ведении на предметы в HUD. 'Только дистанция' будет отображать дистанцию до цели. Дистанция будет красной, если цель вне досягаемости. 'Игровой режим' будет отображать шанс попадания по цели (для атак и испытаний).",
+        "choices": {
+          "none": "Отключено",
+          "rangeOnly": "Только дистанция",
+          "full": "Режим игры"
+        }
+      },
+      "thememenu": {
+        "name": "Настройка темы",
+        "hint": "Настройка и выбор оформления Argon",
+        "label": "Настройка тем"
+      }
+    },
+    "tooltip": {
+      "target": {
+        "name": "Цель"
+      },
+      "range": {
+        "name": "Дистанция"
+      },
+      "properties": {
+        "name": "Свойства"
+      }
+    },
+    "themeOptions": {
+      "save": "Сохранение изменений",
+      "export": "Экспорт темы",
+      "autoTextColorTitle": "Автоматически выставлять цвет текста на основе фона",
+      "autoTextColorHint": "Цвет текста будет автоматически подобран, чтобы быть читаемым на выбранном фоне.",
+      "exportThemeName": "Название темы:",
+      "exportTheme": {
+        "save": "Сохранение",
+        "cancel": "Отмена"
+      },
+      "themeTitle": "Выбор темы",
+      "themeHint": "Выбор темы также изменит настройки палитры.",
+      "mainAction": "Цвет основных действий",
+      "bonusAction": "Цвет бонусных действий",
+      "freeAction": "Цвет свободных действий",
+      "reaction": "Цвет ответных действий",
+      "endTurn": "Цвет конца хода",
+      "tooltip": "Цвет подсказок",
+      "abilityMenu": "Цвет меню характеристик",
+      "buttons": "Цвет кнопок",
+      "movement": "Цвет блока перемещения",
+      "background": "Цвет фона",
+      "color": "Цвет текста",
+      "border": "Цвет рамки",
+      "boxShadow": "Цвет теней",
+      "mainActionBase": "Цвета фона/текста/рамки, когда курсор не над элементом",
+      "mainActionHover": "Цвета фона/текста/рамки, когда курсор над элементом",
+      "bonusActionBase": "Цвета фона/текста/рамки, когда курсор не над элементом",
+      "bonusActionHover": "Цвета фона/текста/рамки, когда курсор над элементом",
+      "freeActionBase": "Цвета фона/текста/рамки, когда курсор не над элементом",
+      "freeActionHover": "Цвета фона/текста/рамки, когда курсор над элементом",
+      "reactionBase": "Цвета фона/текста/рамки, когда курсор не над элементом",
+      "reactionHover": "Цвета фона/текста/рамки, когда курсор над элементом",
+      "endTurnBase": "Цвета фона/текста/рамки, когда курсор не над элементом",
+      "endTurnHover": "Цвета фона/текста/рамки, когда курсор над элементом",
+      "tooltipHeader": "Цвета фона/текста/рамки заголовка подсказок и окон",
+      "tooltipSubtitle": "Цвета фона/текста/рамки подзаголовка в подсказках",
+      "tooltipBody": "Цвета фона/текста/рамки основного текста в подсказках и окнах",
+      "abilityMenuBase": "Цвета переднего фона/теней, когда курсор не над элементом",
+      "abilityMenuHover": "Цвета переднего фона/теней, когда курсор над элементом",
+      "buttonsBase": "Цвета фона/переднего фона/рамки, когда курсор не над элементом",
+      "buttonsHover": "Цвета фона/переднего фона/рамки, когда курсор над элементом",
+      "movementUsed": "Фон/тень ячеек, отражающих использованные клетки перемещения",
+      "movementBaseMovement": "Фон/тень ячеек, отражающих доступные клетки перемещения",
+      "movementDashMovement": "Фон/тень ячеек, отражающих клетки перемещения рывком",
+      "movementDangerMovement": "Фон/тень ячеек, отражающих превышающие доступные клетки перемещения"
+    }
+  }
 }
